Add support to nested idict in cache
Update garoupa for correct etype inducer on ldict.ø