@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "idict"
-version = "1.211125.0"
-description = "Lazy dict with deterministic universally unique identifier for values"
+version = "2.211126.0"
+description = "Lazy dict with predictable deterministic universally unique identifiers"
 authors = ["davips <dpsabc@gmail.com>"]
 license = "GPL"
 readme = 'README.md'
@@ -22,10 +22,11 @@ SQLAlchemy = { version = "^1.4.26", optional = true }
 lz4 = "^3.1.3"
 ldict = "^3.211124.1"
 arff2pandas = {version = "^1.0.1", optional = true}
+dill = "^0.3.4"
 
 [tool.poetry.dev-dependencies]
 autoreadme = "^0.2102.20"
-pytest = "^6.2.2"
+pytest = "^6.2.5"
 black = "^21.7b0"
 pypiserver = "^1.4.2"
 passlib = "^1.7.4"
