@@ -37,8 +37,6 @@ from idict.persistence.cached import build, get_following_pointers
 
 VT = TypeVar("VT")
 
-# TODO: Usar pickle da f/class pra gerar id? [pickle embute imports, mas não inclui seus codigos]
-
 # TODO: Criar Metadata na F pra servir de memoization
 # TODO: Aceitar function:... No Metadata. Vai ser pickleado  pois vai dentro do histórico,
 #  ou talvez tb num metafield se o usuário quiser tal como se quiser o _code.
